--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,20 @@
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
+include(system)
 project(model_parser CXX C)
 set(CMAKE_CUDA_STANDARD 14)
 set(CMAKE_BUILD_TYPE Release)
 
 find_package(Threads REQUIRED)
 
-set(INFRT_SOURCE_DIR "${CMAKE_SOURCE_DIR}/model_parser")
-set(INFRT_BINARY_DIR "${CMAKE_BINARY_DIR}/model_parser")
+option(WITH_MLIR "Compile model_parser with MLIR" OFF)
+
+set(MODEL_SOURCE_DIR "${CMAKE_SOURCE_DIR}/model_parser")
+set(MODEL_BINARY_DIR "${CMAKE_BINARY_DIR}/model_parser")
 
 set(paddle_src CACHE INTERNAL "" FORCE)
+include(configure)
 include(ccache)
 include(core)
 include(third_party)
